New detail=values and minmax for Records. sys/groups
